# webnotes

./: .gitignore  CLAUDE.md  README.md  notes_db.py  sync_notes.py
.claude/: settings.local.json
.claude/commands/: make-notes.md
backend/: .env.example  README.md  main.py  notion_sync.py  pyproject.toml
extension/: background.js  content.js  help.html  manifest.json  popup.html  popup.js
hooks/: notion_sync.py
